kustomize/apps/dashboard-test/base/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-test
  # namespace: msp-system
  labels:
    app: dashboard-test
spec:
  selector:
    matchLabels:
      app: dashboard-test
  template:
    metadata:
      labels:
        app: dashboard-test
    spec:
      imagePullSecrets:
      - name: ghcr-ro-secret
      containers:
      - name: dashboard-test
        # image: uasbase2.pmel.noaa.gov:448/test/dashboard@sha256:1efee0c698b3037b822d00237114e25aacad59942c9dd9199168cc2631143d8d
        image: ghcr.io/noaa-pmel/msp/dashboard-test:1.1.1
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        ports:
        - name: http
          # containerPort: 8000
          containerPort: 8080
          protocol: TCP
      #   volumeMounts:
      #     - name: erddap-datasetd-storage
      #       mountPath: /datasets.d
      #       # subPath: datasets.d
      #     - name: erddap-content-storage
      #       mountPath: /usr/local/tomcat/content/erddap
      #       # subPath: erddap
      #     - name: erddap-data-pv-storage
      #       mountPath: /erddapData
      #       # subPath: erddapData
      # volumes:
      #   - name: erddap-datasetd-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-datasetsd-pvc
      #   - name: erddap-content-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-content-pvc
      #   - name: erddap-data-pv-storage
      #     persistentVolumeClaim:
      #       claimName: dataserver-erddap-data-pvc
