kustomize/apps/dashboard-test/base/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-test
  # namespace: msp-system
  labels:
    app: dashboard-test
spec:
  selector:
    app: dashboard-test
  ports:
  - name: http
    protocol: TCP
    # port: 8000
    port: 8080
    # targetPort: 8000
    targetPort: 8080
  type: ClusterIP
